# openagent

./: COMO_USAR.md  LICENSE  MANIFEST.in  README.md  agente-llm-local.py  final_test.py  install.bat  install.py  install.sh  pyproject.toml  requirements.txt  setup.py  simple_test.py  test_agent.py
openagent/: __init__.py  cli.py  core.py  llm_server.py  model_manager.py  tools.py  ui.py
openagent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
